Puesta suscripción, arreglada sección de tus chat (falta enlace)